--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    <h1>my first web site</h1>
+    <h1 class="title">my first web site</h1>
     <p>bienvenue bienvenido gilberto torres ramos </p>
 
     <p>hello je viens d'ajouter une nouvelle ligne</p>
