--- a/indexgt.html
+++ b/indexgt.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1 class="title">my first web site</h1>
-    <p>bienvenue bienvenido gilberto torres ramos et aurelie torres denis</p>
+    <p>bienvenue bienvenido gilberto torres ramos et aurelie torres denis et charlot</p>
 
     <p>hello je viens d'ajouter une nouvelle ligne</p>
     <p>hello je suis marie et aujourdhi jai beaucoup travaillee</p>
