encore une nouvelle modification

--- a/indexgt.html
+++ b/indexgt.html
@@ -12,10 +12,18 @@
 
     <p>bienvenue bienvenido gilberto torres ramos et aurelie torres denis</p>
 
-
+    <p>hello une nouvelle modification pour tester le stash</p>
 
     <p>hello je viens d'ajouter une nouvelle ligne</p>
     <p>hello je suis marie et aujourdhi jai beaucoup travaillee</p>
     <p>hello je veux etre ajoute au dernier commit heheh </p>
+
+
+
+    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellat illo eum nisi quod asperiores, ab officia explicabo eius et maiores voluptate illum animi soluta nihil! Qui, quas ipsa! Possimus, harum.
+
+
+
+    <h3>heheh encore une autre modification</h3>
 </body>
 </html>
