--- a/indexgt.html
+++ b/indexgt.html
@@ -26,5 +26,6 @@
 
     <h3>heheh encore une autre modification</h3>
     hello modification in react gt branch
+    <h2>hello git hub</h2>
 </body>
 </html>
