--- a/indexgt.html
+++ b/indexgt.html
@@ -27,5 +27,6 @@
     <h3>heheh encore une autre modification</h3>
     hello modification in react gt branch
     <h2>hello git hub</h2>
+    <h3>hello je fais ce changement a partir de github</h3>
 </body>
 </html>
