demo fetch et pull

--- a/indexgt.html
+++ b/indexgt.html
@@ -22,7 +22,7 @@
 
     Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellat illo eum nisi quod asperiores, ab officia explicabo eius et maiores voluptate illum animi soluta nihil! Qui, quas ipsa! Possimus, harum.
 
-
+    <h1>demo fetch et pull</h1>
 
     <h3>heheh encore une autre modification</h3>
     hello modification in react gt branch
